--- a/symbolic-integration-1-transcendental-functions-3.org
+++ b/symbolic-integration-1-transcendental-functions-3.org
@@ -1,3 +1,5 @@
+#+PROPERTY: header-args :exports both :eval never-export
+
 * 3 Differential Fields
 ** 3.1 Derivations
 *** Definition 3.1.1 DifferentialRing
